[package]
name = "modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
env_logger = { version = "0.9.0" }
futures = { version = "0.3.21" }
log = { version = "0.4.17" }
smallvec = "1.8.0"
tokio = {version = "1.19.2", features = ["full"]}
tokio-serial = "5.4.4"
tokio-stream = { version = "0.1.9" }
tokio-util = { version = "0.7.3", features = ["net", "codec"]}
uuid = { version = "1.1.2", features = [ "v4", "fast-rng" ] }
