[package]
name = "codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = {version = "0.7.3", features = [ "codec" ] }
byteorder = "1.4.3"
bytes = "1.1.0"
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }

# local
frame = { path = "../frame" }

