[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { path = "../../core/codec" }
frame = { path = "../../core/frame" }
tokio = {version = "1.19.2", features = ["full"]}
tokio-util = { version = "0.7.3", features = ["codec"]}
futures = { version = "0.3.21" }
log = { version = "0.4.17" }
