[package]
name = "slave-rnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frame = { path = "../../core/frame" }
transport = { path = "../../core/transport" }
tokio = {version = "1.19.2", features = ["full"]}
rand = { version = "0.8.5" }
log = { version = "0.4.17" }
env_logger = { version = "0.9.0" }
